New entries should be added at the top

2005-01-18 Plugged an image resize memory leaks - JDH

2005-01-18 Fixed some mathtext parser problems relating to superscripts

2005-01-17 Fixed a yticklabel problem for colorbars under change of  
           clim - JDH
 
2005-01-17 Cleaned up Destroy handling in wx reducing memleak/fig from
           approx 800k to approx 6k- JDH

2005-01-17 Added kappa to latex_to_bakoma - JDH

2005-01-15 Support arbitrary colorbar axes and horizontal colorbars - JDH

2005-01-15 Fixed colormar number of colors bug so that the colorbar
           has the same discretization as the image - JDH

2005-01-15 Added Nadia's x,y contour fix - JDH

2005-01-15 backend_cairo: added PDF support which requires pycairo 0.1.4.
           Its not usable yet, but is ready for when the Cairo PDF backend 
	   matures - SC

2005-01-15 Added Nadia's x,y contour fix

2005-01-12 Fixed set clip_on bug in artist - JDH

2005-01-11 Reverted pythoninspect in tkagg - JDH

2005-01-09 Fixed a backend_bases event bug caused when an event is
           triggered when location is None - JDH

2005-01-07 Add patch from Stephen Walton to fix bug in pylab.load()
           when the % character is included in a comment. - ADS

2005-01-07 Added markerscale attribute to Legend class.  This allows
           the marker size in the legend to be adjusted relative to
           that in the plot. - ADS

2005-01-06 Add patch from Ben Vanhaeren to make the FigureManagerGTK vbox a
           public attribute - SC

====================================================================
2004-12-30 Release 0.70

2004-12-28 Added coord location to key press and added a
           examples/picker_demo.py

2004-12-28 Fixed coords notification in wx toolbar - JDH

2004-12-28 Moved connection and disconnection event handling to the
           FigureCanvasBase.  Backends now only need to connect one
           time for each of the button press, button release and key